1차 배포 전 기능 완료 - 4주간 중복된 업무 배정 되지 않도록 -  연차 고려 -  업무 역할 젠더 고려